--- a/Public/login.html
+++ b/Public/login.html
@@ -36,23 +36,49 @@
       text-align: left;
     }
     input[type="email"],
-    input[type="password"] {
+    input[type="password"],
+    input[type="text"] {
       width: 100%;
       padding: 12px 4px;
       font-size: 16px;
-      margin-bottom: 25px;
       border: 1.5px solid #ccc;
       border-radius: 5px;
       transition: border-color 0.3s;
+      box-sizing: border-box;
     }
-    input[type="email"]:focus,
-    input[type="password"]:focus {
-      border-color: #d33; /* Dark red on focus */
+    input:focus {
+      border-color: #d33;
       outline: none;
     }
-    button {
+
+    .password-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 25px;
+    }
+
+    .togglePassword {
+      padding: 10px 14px;
+      font-size: 14px;
+      cursor: pointer;
+      background: none;
+      border: 1.5px solid #d33;
+      border-radius: 5px;
+      color: #d33;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .togglePassword:hover,
+    .togglePassword:focus {
+      background-color: #d33;
+      color: white;
+      outline: none;
+    }
+
+    button[type="submit"] {
       width: 100%;
-      background-color: #d33; /* Red button */
+      background-color: #d33;
       color: white;
       font-size: 18px;
       font-weight: 600;
@@ -63,9 +89,11 @@
       transition: background-color 0.3s;
       margin-top: 10px;
     }
-    button:hover {
+
+    button[type="submit"]:hover {
       background-color: #a22;
     }
+
     .error {
       color: red;
       font-size: 14px;
@@ -73,16 +101,19 @@
       display: none;
       text-align: left;
     }
+
     p {
       margin-top: 25px;
       font-size: 15px;
       color: #555;
     }
+
     p a {
       color: #d33;
       text-decoration: none;
       font-weight: 600;
     }
+
     p a:hover {
       text-decoration: underline;
     }
@@ -96,13 +127,14 @@
     <input type="email" id="email" name="email" required />
 
     <label for="password">Şifre:</label>
-    <input type="password" id="password" name="password" required />
+    <div class="password-wrapper">
+      <input type="password" id="password" name="password" required />
+      <button type="button" class="togglePassword">Göster</button>
+    </div>
 
     <div id="loginError" class="error"></div>
 
     <button type="submit">Giriş</button>
-
-    <p>Hesabınız yok mu? <a href="/register.html">Kayıt Ol</a></p>
   </form>
 
   <script>
@@ -110,55 +142,60 @@
     const loginError = document.getElementById('loginError');
 
     form.addEventListener('submit', async (e) => {
-  e.preventDefault();
+      e.preventDefault();
 
-  loginError.style.display = 'none';
-  loginError.textContent = '';
+      loginError.style.display = 'none';
+      loginError.textContent = '';
 
-  const email = form.email.value.trim();
-  const password = form.password.value;
+      const email = form.email.value.trim();
+      const password = form.password.value;
 
-  try {
-    const response = await fetch('/login', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email, password })
+      try {
+        const response = await fetch('/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          localStorage.setItem('user', JSON.stringify({
+            firstName: data.user.First_Name,
+            lastName: data.user.Last_Name,
+            email: data.user.Email,
+            phone: data.user.Phone,
+          }));
+
+          if (data.user.Role_ID == 1) {
+            window.location.href = '/admin_dashboard.html';
+          } else if (data.user.Role_ID == 2) {
+            window.location.href = '/teacher_dashboard.html';
+          } else if (data.user.Role_ID == 3) {
+            window.location.href = '/dashboard.html';
+          }
+        } else {
+          if (data.error === 'email_not_registered') {
+            loginError.textContent = 'Bu e-posta kayıtlı değil.';
+          } else if (data.error === 'incorrect_password') {
+            loginError.textContent = 'Şifre yanlış.';
+          } else {
+            loginError.textContent = 'Giriş başarısız.';
+          }
+          loginError.style.display = 'block';
+        }
+      } catch {
+        loginError.textContent = 'Sunucu hatası. Lütfen daha sonra tekrar deneyin.';
+        loginError.style.display = 'block';
+      }
     });
 
-    const data = await response.json();
-
-    if (response.ok) {
-      // Save user info to localStorage
-      localStorage.setItem('user', JSON.stringify({
-        firstName: data.user.First_Name,
-        lastName: data.user.Last_Name,
-        email: data.user.Email,
-        phone: data.user.Phone,
-      }));
-
-    if (data.user.Role_ID == 1) {
-      window.location.href = '/admin_dashboard.html'; // Redirect to admin dashboard
-    } else if (data.user.Role_ID == 2) {
-      window.location.href = '/teacher_dashboard.html'; // Redirect to teacher dashboard 
-    } else if (data.user.Role_ID == 3) {
-      window.location.href = '/dashboard.html'; // Redirect to guardian dashboard 
-    }
-
-    } else {
-      if (data.error === 'email_not_registered') {
-        loginError.textContent = 'Bu e-posta kayıtlı değil.';
-      } else if (data.error === 'incorrect_password') {
-        loginError.textContent = 'Şifre yanlış.';
-      } else {
-        loginError.textContent = 'Giriş başarısız.';
-      }
-      loginError.style.display = 'block';
-    }
-  } catch {
-    loginError.textContent = 'Sunucu hatası. Lütfen daha sonra tekrar deneyin.';
-    loginError.style.display = 'block';
-  }
-});
+    // Şifre Göster/Gizle
+    document.querySelector('.togglePassword').addEventListener('click', function () {
+      const input = document.getElementById('password');
+      const isHidden = input.type === 'password';
+      input.type = isHidden ? 'text' : 'password';
+      this.textContent = isHidden ? 'Gizle' : 'Göster';
+    });
   </script>
 </body>
-</html>
