--- a/Public/register_student.html
+++ b/Public/register_student.html
@@ -82,6 +82,7 @@
   </style>
 </head>
 <body>
+  <div id="categoryError" style="color: red; font-weight: bold; margin-bottom: 10px; display: none;"></div>
   <div class="registration-container">
     <h1>Öğrenci Kayıt Formu</h1>
     <form id="studentRegistrationForm">
@@ -94,14 +95,23 @@
       <label for="birthDate">Doğum Tarihi</label>
       <input type="date" id="birthDate" name="birthDate" required />
 
+      <label for="categoryFilter">Kategori (opsiyonel)</label>
+      <select id="categoryFilter">
+      <option value="">Tümü</option>
+      </select>
+      <label for="levelFilter">Seviye (opsiyonel)</label>
+      <select id="levelFilter">
+        <option value="">Tümü</option>
+      </select>
+
       <label for="courseId">Kurs</label>
       <select id="courseId" name="courseId" required>
-        <option value="">Seçiniz</option>
-        <option value="1">Robotik-1 Okul Öncesi</option>
-        <option value="2">Robotik-1 We-Do</option>
-        <option value="3">Robotik-2 Essential</option>
-        <option value="4">Robotik-2 İleri İlkokul Kodlama</option>
+        <option value="">Yükleniyor...</option>
       </select>
+
+      <label for="programId">Program Saati</label>
+      <select id="programId" name="programId" required>
+        <option value="">Saat seçiniz</option>
 
       <label for="guardianSearch">Veli Ara</label>
       <input type="text" id="guardianSearch" placeholder="İsimle ara..." autocomplete="off" />
@@ -113,92 +123,275 @@
   </div>
 
   <script>
-    document.getElementById('birthDate').max = new Date().toISOString().split('T')[0];
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('birthDate').max = new Date().toISOString().split('T')[0];
+      document.getElementById('categoryFilter').addEventListener('change', updateCourseOptions);
+      document.getElementById('levelFilter').addEventListener('change', updateCourseOptions);
 
-    const form = document.getElementById('studentRegistrationForm');
-    const guardianSearch = document.getElementById('guardianSearch');
-    const guardianResults = document.getElementById('guardianResults');
-    const guardianIdInput = document.getElementById('guardianId');
+      const form = document.getElementById('studentRegistrationForm');
+      const guardianSearch = document.getElementById('guardianSearch');
+      const guardianResults = document.getElementById('guardianResults');
+      const guardianIdInput = document.getElementById('guardianId');
 
-    // Guardian live search
-    guardianSearch.addEventListener('input', async () => {
-      const query = guardianSearch.value.trim();
-      guardianResults.innerHTML = '';
-      guardianResults.style.display = 'none';
+      // Guardian live search
+      guardianSearch.addEventListener('input', async () => {
+        const query = guardianSearch.value.trim();
+        const queryNormalized = query.toLocaleLowerCase('tr'); // Normalize Turkish input
+        guardianResults.innerHTML = '';
+        guardianResults.style.display = 'none';
 
-      if (query.length < 2) return;
+        if (query.length < 2) return;
 
-      try {
-        const response = await fetch(`/api/guardians/search?query=${encodeURIComponent(query)}`, {
-          credentials: 'include',
-        });
-        const results = await response.json();
+        try {
+          const response = await fetch(`/api/guardians/search?query=${encodeURIComponent(queryNormalized)}`, {
+            credentials: 'include',
+          });
+          const results = await response.json();
 
-        if (results.length === 0) {
-          guardianResults.innerHTML = '<div>Veli bulunamadı</div>';
-        } else {
-          results.forEach(guardian => {
-            const div = document.createElement('div');
-            div.textContent = `${guardian.First_Name} ${guardian.Last_Name} (${guardian.Email})`;
-            div.dataset.id = guardian.Guardian_ID;
-            div.addEventListener('click', () => {
-              guardianSearch.value = `${guardian.First_Name} ${guardian.Last_Name}`;
-              guardianIdInput.value = guardian.Guardian_ID;
-              guardianResults.style.display = 'none';
+          if (results.length === 0) {
+            guardianResults.innerHTML = '<div>Veli bulunamadı</div>';
+          } else {
+            results.forEach(guardian => {
+              const div = document.createElement('div');
+              div.textContent = `${guardian.First_Name} ${guardian.Last_Name} (${guardian.Email})`;
+              div.dataset.id = guardian.Guardian_ID;
+              div.addEventListener('click', () => {
+                guardianSearch.value = `${guardian.First_Name} ${guardian.Last_Name}`;
+                guardianIdInput.value = guardian.Guardian_ID;
+                guardianResults.style.display = 'none';
+              });
+              guardianResults.appendChild(div);
             });
-            guardianResults.appendChild(div);
+          }
+          guardianResults.style.display = 'block';
+        } catch (err) {
+          console.error('Veli arama hatası:', err);
+        }
+      });
+
+      document.getElementById('courseId').addEventListener('change', async function () {
+        const courseId = this.value;
+        const programSelect = document.getElementById('programId');
+        programSelect.innerHTML = ''; // Clear previous options
+
+        if (!courseId) return;
+
+        try {
+          const res = await fetch(`/api/programs/by-course/${courseId}`, {
+            credentials: 'include'
+          });
+
+          const data = await res.json();
+
+          if (data.programs.length === 0) {
+            const option = document.createElement('option');
+            option.textContent = 'Saat bulunamadı';
+            option.disabled = true;
+            programSelect.appendChild(option);
+            return;
+          }
+
+          // Add default option
+          const defaultOption = document.createElement('option');
+          defaultOption.value = '';
+          defaultOption.textContent = 'Program saati seçiniz';
+          defaultOption.disabled = true;
+          defaultOption.selected = true;
+          programSelect.appendChild(defaultOption);
+
+          // Add each program
+          data.programs.forEach(p => {
+            const current = parseInt(p.Current_Count);
+            const capacity = parseInt(p.Capacity);
+            const isFull = current >= capacity;
+
+            const option = document.createElement('option');
+            option.value = p.Program_ID;
+            option.textContent = `${p.Day} - ${p.Start_Time.slice(0, 5)}-${p.End_Time.slice(0, 5)} (${current}/${capacity})`;
+
+            if (isFull) {
+              option.disabled = true;
+              option.style.color = 'red';
+              option.textContent += ' (DOLU)';
+            }
+
+            programSelect.appendChild(option);
+          });
+        } catch (err) {
+          console.error('Saatler alınamadı:', err);
+        }
+      });
+
+      // Hide results when clicking outside
+      document.addEventListener('click', e => {
+        if (!guardianSearch.contains(e.target) && !guardianResults.contains(e.target)) {
+          guardianResults.style.display = 'none';
+        }
+      });
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const firstName = form.firstName.value.trim();
+        const lastName = form.lastName.value.trim();
+        const birthDate = form.birthDate.value;
+        const courseId = form.courseId.value;
+        const guardianId = form.guardianId.value;
+        const programId = form.programId.value;
+        console.log('Selected guardianId:', guardianId);
+
+        if (!guardianId) {
+          alert('Lütfen bir veli seçiniz.');
+          return;
+        }
+
+        if (!programId) {
+          alert('Lütfen bir program saati seçiniz.');
+          return;
+        }
+
+        const data = { firstName, lastName, birthDate, courseId, guardianId, selectedProgramIds: [programId] };
+
+        fetch('/student_register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          credentials: 'include',
+          body: JSON.stringify(data)
+        })
+          .then(response => response.json())
+          .then(result => {
+            if (result.message) {
+              alert(result.message);
+              window.location.href = '/admin_dashboard.html';
+            } else if (result.error) {
+              alert(result.error);
+            }
+          })
+          .catch(error => {
+            console.error('Request error:', error);
+            alert('Sunucuya bağlanılamadı.');
+          });
+      });
+
+      loadCategoriesAndLevels();
+    });
+
+    async function loadCategoriesAndLevels() {
+      const catSelect = document.getElementById('categoryFilter');
+      const catError = document.getElementById('categoryError');
+      catSelect.innerHTML = '<option value="">Tümü</option>';
+      try {
+        const [catRes, levelRes] = await Promise.all([
+          fetch('/api/categories', { credentials: 'include' }),
+          fetch('/api/course-levels', { credentials: 'include' })
+        ]);
+        const cats = await catRes.json();
+        const levels = await levelRes.json();
+        catError.style.display = 'block';
+        catError.textContent = 'API response: ' + JSON.stringify(cats);
+        if (!cats.categories || cats.categories.length === 0) {
+          catError.textContent += ' | Kategori bulunamadı.';
+        } else {
+          catError.style.display = 'none';
+          cats.categories.forEach(c => {
+            const opt = document.createElement('option');
+            opt.value = c.Category_ID;
+            opt.textContent = c.Category_Name;
+            catSelect.appendChild(opt);
           });
         }
-        guardianResults.style.display = 'block';
-      } catch (err) {
-        console.error('Veli arama hatası:', err);
-      }
-    });
-
-    // Hide results when clicking outside
-    document.addEventListener('click', e => {
-      if (!guardianSearch.contains(e.target) && !guardianResults.contains(e.target)) {
-        guardianResults.style.display = 'none';
-      }
-    });
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const firstName = form.firstName.value.trim();
-      const lastName = form.lastName.value.trim();
-      const birthDate = form.birthDate.value;
-      const courseId = form.courseId.value;
-      const guardianId = form.guardianId.value;
-      console.log('Selected guardianId:', guardianId);
-
-      if (!guardianId) {
-        alert('Lütfen bir veli seçiniz.');
-        return;
-      }
-
-      const data = { firstName, lastName, birthDate, courseId, guardianId };
-
-      fetch('/student_register', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        credentials: 'include',
-        body: JSON.stringify(data)
-      })
-        .then(response => response.json())
-        .then(result => {
-          if (result.message) {
-            alert(result.message);
-            window.location.href = '/admin_dashboard.html';
-          } else if (result.error) {
-            alert(result.error);
-          }
-        })
-        .catch(error => {
-          console.error('Request error:', error);
-          alert('Sunucuya bağlanılamadı.');
+        const levelSelect = document.getElementById('levelFilter');
+        levelSelect.innerHTML = '<option value="">Tümü</option>';
+        levels.levels.forEach(lvl => {
+          const opt = document.createElement('option');
+          opt.value = lvl;
+          opt.textContent = lvl;
+          levelSelect.appendChild(opt);
         });
-    });
+        await loadAllCourses();
+      } catch (err) {
+        catError.style.display = 'block';
+        catError.textContent = 'Kategoriler yüklenemedi: ' + err;
+        console.error('Kategoriler yüklenemedi:', err);
+      }
+    }
+
+    // fetch and filter courses based on selected category & level:
+    async function updateCourseOptions() {
+      const categoryId = document.getElementById('categoryFilter').value;
+      const level = document.getElementById('levelFilter').value;
+      const courseSelect = document.getElementById('courseId');
+
+      // Clear previous courses
+      courseSelect.innerHTML = '<option value="">Yükleniyor...</option>';
+
+      try {
+        // Build query parameters
+        const params = new URLSearchParams();
+        if (categoryId) params.append('categoryId', categoryId);
+        if (level) params.append('level', level);
+
+        const response = await fetch(`/api/courses?${params.toString()}`, {
+          credentials: 'include'
+        });
+
+        const data = await response.json();
+        courseSelect.innerHTML = '';
+
+        if (!data.courses || data.courses.length === 0) {
+          courseSelect.innerHTML = '<option value="">Uygun kurs bulunamadı</option>';
+        } else {
+          const defaultOption = document.createElement('option');
+          defaultOption.value = '';
+          defaultOption.textContent = 'Kurs seçiniz';
+          courseSelect.appendChild(defaultOption);
+
+          data.courses.forEach(course => {
+            const option = document.createElement('option');
+            option.value = course.Course_ID;
+            option.textContent = course.Course_Name;
+            courseSelect.appendChild(option);
+          });
+        }
+      } catch (err) {
+        console.error('Kurslar yüklenemedi:', err);
+        courseSelect.innerHTML = '<option value="">Kurslar alınamadı</option>';
+      }
+    }
+
+    // Load all courses without filters
+    async function loadAllCourses() {
+      const courseSelect = document.getElementById('courseId');
+      courseSelect.innerHTML = '<option value="">Yükleniyor...</option>';
+
+      try {
+        const response = await fetch('/api/courses', {
+          credentials: 'include'
+        });
+
+        const data = await response.json();
+        courseSelect.innerHTML = '';
+
+        if (!data.courses || data.courses.length === 0) {
+          courseSelect.innerHTML = '<option value="">Kurs bulunamadı</option>';
+        } else {
+          const defaultOption = document.createElement('option');
+          defaultOption.value = '';
+          defaultOption.textContent = 'Kurs seçiniz';
+          courseSelect.appendChild(defaultOption);
+
+          data.courses.forEach(course => {
+            const option = document.createElement('option');
+            option.value = course.Course_ID;
+            option.textContent = course.Course_Name;
+            courseSelect.appendChild(option);
+          });
+        }
+      } catch (err) {
+        console.error('Kurslar yüklenemedi:', err);
+        courseSelect.innerHTML = '<option value="">Kurslar alınamadı</option>';
+      }
+    }
   </script>
 </body>
 </html>
