--- a/Public/admin_dashboard.html
+++ b/Public/admin_dashboard.html
@@ -539,6 +539,7 @@
   <div id="changeCourseModal" class="modal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); justify-content:center; align-items:center;">
     <div class="registration-container" style="position:relative; margin:auto;">
       <button id="closeChangeCourseModalBtn" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:24px; cursor:pointer;">&times;</button>
+      <div id="changeCourseStudentInfo" style="margin-bottom:16px; font-size:1.1em;"></div>
       <h1>Kurs ve Program Değiştir</h1>
       <form id="changeCourseForm">
         <label for="changeCategoryFilter">Kategori (opsiyonel)</label>
@@ -651,6 +652,7 @@
                 <button class="edit-btn" onclick="editStudent(${student.studentId})">
                   ✏️ Düzenle
                 </button>
+                <button class="change-course-btn" onclick="changeStudentCourse(${student.studentId})">🔄 Kurs Değiştir</button>
                 <button class="delete-btn" onclick="deleteStudent(${student.studentId}, '${student.firstName} ${student.lastName}')">
                   ⏸️ Pasife Al
                 </button>
