--- a/Public/admin_dashboard.html
+++ b/Public/admin_dashboard.html
@@ -310,6 +310,15 @@
                 <option value="Yetişkin">Yetişkin</option>
               </select>
             </div>
+            <div class="search-input-group">
+              <label for="courseDifficultySearch">Zorluk</label>
+              <select id="courseDifficultySearch" class="search-input-field">
+                <option value="">Tüm zorluk seviyeleri</option>
+                <option value="Başlangıç">Başlangıç</option>
+                <option value="Orta">Orta</option>
+                <option value="İleri">İleri</option>
+              </select>
+            </div>
             <div class="search-buttons">
               <button class="search-btn" id="searchCourseBtn">
                 🔍 Ara
@@ -722,12 +731,58 @@
           <option value="Lise">Lise</option>
           <option value="Yetişkin">Yetişkin</option>
         </select>
+        <label for="courseDifficulty">Zorluk</label>
+        <select id="courseDifficulty" name="courseDifficulty" required>
+          <option value="">Zorluk seçiniz</option>
+          <option value="Başlangıç">Başlangıç</option>
+          <option value="Orta">Orta</option>
+          <option value="İleri">İleri</option>
+        </select>
         <label for="courseStatus">Durum</label>
         <select id="courseStatus" name="courseStatus" required>
           <option value="Aktif">Aktif</option>
           <option value="Pasif">Pasif</option>
         </select>
         <button type="submit">Kaydı Tamamla</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Edit Course Modal -->
+  <div id="editCourseModal" class="modal" style="display:none;">
+    <div class="registration-container" style="position:relative; margin:auto;">
+      <button id="closeEditCourseModalBtn" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:24px; cursor:pointer;">&times;</button>
+      <h1>Kurs Düzenle</h1>
+      <form id="editCourseForm">
+        <label for="editCourseName">Kurs Adı</label>
+        <input type="text" id="editCourseName" name="editCourseName" required />
+        <label for="editCourseCategory">Kategori</label>
+        <select id="editCourseCategory" name="editCourseCategory" required>
+          <option value="">Kategori seçiniz</option>
+          <!-- Options will be populated dynamically -->
+        </select>
+        <label for="editCourseLevel">Seviye</label>
+        <select id="editCourseLevel" name="editCourseLevel" required>
+          <option value="">Seviye seçiniz</option>
+          <option value="Okul Öncesi">Okul Öncesi</option>
+          <option value="İlkokul">İlkokul</option>
+          <option value="Ortaokul">Ortaokul</option>
+          <option value="Lise">Lise</option>
+          <option value="Yetişkin">Yetişkin</option>
+        </select>
+        <label for="editCourseDifficulty">Zorluk</label>
+        <select id="editCourseDifficulty" name="editCourseDifficulty" required>
+          <option value="">Zorluk seçiniz</option>
+          <option value="Başlangıç">Başlangıç</option>
+          <option value="Orta">Orta</option>
+          <option value="İleri">İleri</option>
+        </select>
+        <label for="editCourseStatus">Durum</label>
+        <select id="editCourseStatus" name="editCourseStatus" required>
+          <option value="Aktif">Aktif</option>
+          <option value="Pasif">Pasif</option>
+        </select>
+        <button type="submit">Güncelle</button>
       </form>
     </div>
   </div>
